--- a/index.html
+++ b/index.html
@@ -7,58 +7,59 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="css/estilo.css" />
 </head>
+
 <body>
   <header>
-    <div class="topo">
+    <div class="header-content">
       <img src="imagens/logo.png" alt="Logo de Carlos Carlotto" class="logo" />
+      <nav>
+        <ul>
+          <li><a href="index.html">Início</a></li>
+          <li><a href="fotos.html">Fotos</a></li>
+          <li><a href="videos.html">Vídeos</a></li>
+          <li><a href="contato.html">Contato</a></li>
+        </ul>
+      </nav>
     </div>
-    <nav>
-      <ul>
-        <li><a href="index.html">Início</a></li>
-        <li><a href="fotos.html">Fotos</a></li>
-        <li><a href="videos.html">Vídeos</a></li>
-        <li><a href="contato.html">Contato</a></li>
-      </ul>
-    </nav>
   </header>
 
   <section class="sliders-duplos">
 
-  <!-- Primeiro bloco: título + texto + slider -->
-  <div class="bloco-slider">
-    <div class="texto-slider titulo">Correção de cor</div>
-    <div class="texto-slider texto-explicativo">
-      A correção de cor é uma das coisas mais importantes para garantir a qualidade visual do seu conteúdo.
-    </div>
-    <div class="antes-depois-container" id="slider-container-3">
-      <img src="imagens/depois3.webp" alt="Depois da correção de cor" class="antes-img" />
-      <img src="imagens/antes3.webp" alt="Antes da correção de cor" class="depois-img" id="after-img-3" />
-      <div class="slider-bar" id="slider-3">
-        <div class="slider-handle"></div>
+    <!-- Primeiro bloco: título + texto + slider -->
+    <div class="bloco-slider">
+      <div class="texto-slider titulo">Correção de cor</div>
+      <div class="texto-slider texto-explicativo">
+        A correção de cor é uma das coisas mais importantes para garantir a qualidade visual do seu conteúdo.
+      </div>
+      <div class="antes-depois-container" id="slider-container-3">
+        <img src="imagens/depois3.webp" alt="Depois da correção de cor" class="antes-img" />
+        <img src="imagens/antes3.webp" alt="Antes da correção de cor" class="depois-img" id="after-img-3" />
+        <div class="slider-bar" id="slider-3">
+          <div class="slider-handle"></div>
+        </div>
       </div>
     </div>
-  </div>
 
-  <!-- Segundo bloco: slider + título + texto -->
-  <div class="bloco-slider">
-    <div class="antes-depois-container" id="slider-container">
-      <img src="imagens/depoiis.jpg" alt="Depois da remoção de riscos" class="antes-img" />
-      <img src="imagens/antis.jpg" alt="Antes da remoção de riscos" class="depois-img" id="after-img" />
-      <div class="slider-bar" id="slider">
-        <div class="slider-handle"></div>
+    <!-- Segundo bloco: slider + título + texto -->
+    <div class="bloco-slider">
+      <div class="antes-depois-container" id="slider-container">
+        <img src="imagens/depoiis.jpg" alt="Depois da remoção de riscos" class="antes-img" />
+        <img src="imagens/antis.jpg" alt="Antes da remoção de riscos" class="depois-img" id="after-img" />
+        <div class="slider-bar" id="slider">
+          <div class="slider-handle"></div>
+        </div>
+      </div>
+      <div class="texto-slider titulo">Remoção de Poluição Visual</div>
+      <div class="texto-slider texto-explicativo">
+        Remoção de elementos distrativos, valorizando a essência da imagem.
       </div>
     </div>
-    <div class="texto-slider titulo">Remoção de Poluição Visual</div>
-    <div class="texto-slider texto-explicativo">
-      Remoção de elementos distrativos, valorizando a essência da imagem.
-    </div>
-  </div>
 
-</section>
+  </section>
 
   <main>
     <section class="hero">
-      <img src="imagens/sticker.png" alt="Sticker Lottin" class="hero-logo" />
+      <img src="imagens/Sticker01.png" alt="Sticker Lottin" class="hero-logo" />
       <section class="apresentacao">
         <p>
           Sou Carlos Eduardo Carlotto — <strong>filmmaker, editor e fotógrafo</strong> — especializado em criar conteúdo visual com identidade, atitude e propósito. Lottin Films é a marca que representa meu olhar e minha forma de contar histórias através da imagem.
