--- a/index.html
+++ b/index.html
@@ -3,82 +3,83 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lottin Films</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+  <title>Carlos E. Carlotto - Portfólio</title>
+  <link rel="stylesheet" href="css/satoshi.css">
   <link rel="stylesheet" href="css/estilo.css" />
 </head>
-
 <body>
   <header>
-    <div class="header-content">
-      <img src="imagens/logo.png" alt="Logo de Carlos Carlotto" class="logo" />
-      <nav>
-        <ul>
-          <li><a href="index.html">Início</a></li>
-          <li><a href="fotos.html">Fotos</a></li>
-          <li><a href="videos.html">Vídeos</a></li>
-          <li><a href="contato.html">Contato</a></li>
-        </ul>
-      </nav>
-    </div>
-  </header>
+    <div class="topo">
+      <a href="index.html">
+        <img src="imagens/logo.png" alt="Logo de Carlos Carlotto" class="logo" />
+      </a>
 
+    <nav>
+      <ul>
+        <li><a href="index.html">Início</a></li>
+        <li><a href="fotos.html">Fotos</a></li>
+        <li><a href="videos.html">Vídeos</a></li>
+        <li><a href="contato.html">Contato</a></li>
+      </ul>
+    </nav>
+       </div>
+  </header>
+<section class="hero">
+      <img src="imagens/sticker.png" alt="Sticker Lottin" class="hero-logo" />
   <section class="sliders-duplos">
 
-    <!-- Primeiro bloco: título + texto + slider -->
-    <div class="bloco-slider">
-      <div class="texto-slider titulo">Correção de cor</div>
-      <div class="texto-slider texto-explicativo">
-        A correção de cor é uma das coisas mais importantes para garantir a qualidade visual do seu conteúdo.
-      </div>
-      <div class="antes-depois-container" id="slider-container-3">
-        <img src="imagens/depois3.webp" alt="Depois da correção de cor" class="antes-img" />
-        <img src="imagens/antes3.webp" alt="Antes da correção de cor" class="depois-img" id="after-img-3" />
-        <div class="slider-bar" id="slider-3">
-          <div class="slider-handle"></div>
-        </div>
+  <!-- Primeiro bloco: título + texto + slider -->
+  <div class="bloco-slider">
+    <div class="texto-slider titulo">Correção de cor</div>
+    <div class="texto-slider texto-explicativo">
+      A correção de cor é uma das coisas mais importantes para garantir a qualidade visual do seu conteúdo.
+    </div>
+    <div class="antes-depois-container" id="slider-container-3">
+      <img src="imagens/depois3.webp" alt="Depois da correção de cor" class="antes-img" />
+      <img src="imagens/antes3.webp" alt="Antes da correção de cor" class="depois-img" id="after-img-3" />
+      <div class="slider-bar" id="slider-3">
+        <div class="slider-handle"></div>
       </div>
     </div>
+  </div>
 
-    <!-- Segundo bloco: slider + título + texto -->
-    <div class="bloco-slider">
-      <div class="antes-depois-container" id="slider-container">
-        <img src="imagens/depoiis.jpg" alt="Depois da remoção de riscos" class="antes-img" />
-        <img src="imagens/antis.jpg" alt="Antes da remoção de riscos" class="depois-img" id="after-img" />
-        <div class="slider-bar" id="slider">
-          <div class="slider-handle"></div>
-        </div>
-      </div>
-      <div class="texto-slider titulo">Remoção de Poluição Visual</div>
-      <div class="texto-slider texto-explicativo">
-        Remoção de elementos distrativos, valorizando a essência da imagem.
+  <!-- Segundo bloco: slider + título + texto -->
+  <div class="bloco-slider">
+    <div class="antes-depois-container" id="slider-container">
+      <img src="imagens/depoiis.jpg" alt="Depois da remoção de riscos" class="antes-img" />
+      <img src="imagens/antis.jpg" alt="Antes da remoção de riscos" class="depois-img" id="after-img" />
+      <div class="slider-bar" id="slider">
+        <div class="slider-handle"></div>
       </div>
     </div>
+    <div class="texto-slider titulo">Remoção de Poluição Visual</div>
+    <div class="texto-slider texto-explicativo">
+      Remoção de elementos distrativos, valorizando a essência da imagem.
+    </div>
+  </div>
 
-  </section>
+</section>
 
   <main>
-    <section class="hero">
-      <img src="imagens/Sticker01.png" alt="Sticker Lottin" class="hero-logo" />
       <section class="apresentacao">
-        <p>
-          Sou Carlos Eduardo Carlotto — <strong>filmmaker, editor e fotógrafo</strong> — especializado em criar conteúdo visual com identidade, atitude e propósito. Lottin Films é a marca que representa meu olhar e minha forma de contar histórias através da imagem.
-        </p>
-        <p>
-          Mais do que registrar, meu trabalho é transformar ideias, momentos e marcas em experiências visuais com <strong>força, estética e intenção</strong>. Crio conteúdos audiovisuais para diferentes públicos e objetivos, sempre com foco em <strong>narrativa, estilo e impacto</strong>. Me adapto à essência de cada projeto para entregar um <strong>resultado único, autêntico e alinhado com a proposta</strong>.
-        </p>
-        <p>
-          Aqui no meu portfólio você encontra uma seleção dos meus trabalhos. Cada projeto é <strong>único</strong>, mas todos têm algo em comum: <strong>visual marcante, execução profissional e verdade no que é mostrado</strong>.
-        </p>
-        <h3>
-          Seja qual for a ideia, tudo começa com uma história bem contada. Aqui você encontra alguns dos meus projetos:
-        </h3>
+  <p>
+    Sou <strong>Carlos Eduardo Carlotto</strong> — <strong>filmmaker, editor e fotógrafo</strong> — especializado em criar conteúdo visual com <strong>identidade, atitude e propósito</strong>. Lottin Films é a marca que representa meu olhar e minha forma de contar histórias através da imagem.
+  </p>
+  <p>
+    Mais do que registrar, meu trabalho é transformar ideias, momentos e marcas em experiências visuais com <strong>força, estética e intenção</strong>. Crio conteúdos audiovisuais para diferentes públicos e objetivos, sempre com foco em <strong>narrativa, estilo e impacto</strong>.
+  </p>
+  <p>
+    Aqui no meu portfólio você encontra uma seleção dos meus trabalhos. Cada projeto é <strong>único</strong>, mas todos têm algo em comum: <strong>visual marcante, execução profissional e verdade no que é mostrado</strong>.
+  </p>
+  <h3>
+    Seja qual for a ideia, tudo começa com uma história bem contada. Aqui você encontra alguns dos meus projetos:
+  </h3>
+
         <div class="botoes-projetos">
           <a href="videos.html" class="botao">Vídeos</a>
           <a href="fotos.html" class="botao">Fotos</a>
         </div>
       </section>
-    </section>
   </main>
 
   <footer>
@@ -86,5 +87,4 @@
   </footer>
 
   <script src="js/script.js"></script>
-</body>
-</html>
+
