--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Carlos E. Carlotto - Portfólio</title>
   <link rel="stylesheet" href="css/satoshi.css">
   <link rel="stylesheet" href="css/estilo.css" />
@@ -14,16 +14,18 @@
         <img src="imagens/logo.png" alt="Logo de Carlos Carlotto" class="logo" />
       </a>
 
-    <nav>
-      <ul>
-        <li><a href="index.html">Início</a></li>
-        <li><a href="fotos.html">Fotos</a></li>
-        <li><a href="videos.html">Vídeos</a></li>
-        <li><a href="contato.html">Contato</a></li>
-      </ul>
-    </nav>
-       </div>
+      <nav>
+        <ul>
+          <li><a href="index.html">Início</a></li>
+          <li><a href="fotos.html">Fotos</a></li>
+          <li><a href="videos.html">Vídeos</a></li>
+          <li><a href="contato.html">Contato</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
+
+
 <section class="hero">
       <img src="imagens/sticker.png" alt="Sticker Lottin" class="hero-logo" />
   <section class="sliders-duplos">
