--- a/index.html
+++ b/index.html
@@ -65,14 +65,15 @@
   <main>
       <section class="apresentacao">
   <p>
-    Sou <strong>Carlos Eduardo Carlotto</strong> — <strong>filmmaker, editor e fotógrafo</strong> — especializado em criar conteúdo visual com <strong>identidade, atitude e propósito</strong>. Lottin Films é a marca que representa meu olhar e minha forma de contar histórias através da imagem.
-  </p>
-  <p>
-    Mais do que registrar, meu trabalho é transformar ideias, momentos e marcas em experiências visuais com <strong>força, estética e intenção</strong>. Crio conteúdos audiovisuais para diferentes públicos e objetivos, sempre com foco em <strong>narrativa, estilo e impacto</strong>.
-  </p>
-  <p>
-    Aqui no meu portfólio você encontra uma seleção dos meus trabalhos. Cada projeto é <strong>único</strong>, mas todos têm algo em comum: <strong>visual marcante, execução profissional e verdade no que é mostrado</strong>.
-  </p>
+  Sou <strong>Carlos Eduardo Carlotto</strong> — <strong>filmmaker e editor</strong> — especializado em criar conteúdo visual com <strong>identidade, atitude e propósito</strong>. Com a Lottin Films, transformo ideias em experiências visuais com <strong>força, intenção e narrativa</strong>.
+</p>
+<p>
+  Cada projeto é <strong>único</strong>, mas todos têm algo em comum: <strong>execução profissional e verdade no que é mostrado</strong>. Meu trabalho é contar histórias visuais com autenticidade e impacto.
+</p>
+<p>
+  Aqui no meu portfólio você encontra uma seleção dos meus trabalhos mais recentes. Seja qual for a ideia, tudo começa com uma boa história.
+</p>
+<h3>
   <h3>
     Seja qual for a ideia, tudo começa com uma história bem contada. Aqui você encontra alguns dos meus projetos:
   </h3>
