--- a/index.html
+++ b/index.html
@@ -30,7 +30,6 @@
       <img src="imagens/sticker.png" alt="Sticker Lottin" class="hero-logo" />
   <section class="sliders-duplos">
 
-  <!-- Primeiro bloco: título + texto + slider -->
   <div class="bloco-slider">
     <div class="texto-slider titulo">Correção de cor</div>
     <div class="texto-slider texto-explicativo">
@@ -45,18 +44,17 @@
     </div>
   </div>
 
-  <!-- Segundo bloco: slider + título + texto -->
   <div class="bloco-slider">
+    <div class="texto-slider titulo">Remoção de Poluição Visual</div>
+    <div class="texto-slider texto-explicativo">
+      Remoção de elementos distrativos para destacar o que realmente importa na composição, valorizando a essência visual de cada imagem.
+    </div>
     <div class="antes-depois-container" id="slider-container">
       <img src="imagens/depoiis.jpg" alt="Depois da remoção de riscos" class="antes-img" />
       <img src="imagens/antis.jpg" alt="Antes da remoção de riscos" class="depois-img" id="after-img" />
       <div class="slider-bar" id="slider">
         <div class="slider-handle"></div>
       </div>
-    </div>
-    <div class="texto-slider titulo">Remoção de Poluição Visual</div>
-    <div class="texto-slider texto-explicativo">
-      Remoção de elementos distrativos, valorizando a essência da imagem.
     </div>
   </div>
 
@@ -69,9 +67,6 @@
 </p>
 <p>
   Cada projeto é <strong>único</strong>, mas todos têm algo em comum: <strong>execução profissional e verdade no que é mostrado</strong>. Meu trabalho é contar histórias visuais com autenticidade e impacto.
-</p>
-<p>
-  Aqui no meu portfólio você encontra uma seleção dos meus trabalhos mais recentes. Seja qual for a ideia, tudo começa com uma boa história.
 </p>
 <h3>
   <h3>
