--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
 
     <!-- Primary Meta Tags -->
     <title>Lottin Films - Portfolio</title>
-    <meta name="title" content="Gustavo Gonzaga - Portfolio" />
+    <meta name="title" content="Lottin Films - Portfólio" />
     <meta
       name="description"
-      content="Confira alguns projetos desenvolvidos por mim"
+      content="Confira meus melhores trabalhos!"
     />
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
     <meta
       property="og:url"
-      content="https://portfolio.gustavogonzaga.dev.br/"
+      content="https://lottinfilms.com.br/"
     />
-    <meta property="og:title" content="Gustavo Gonzaga - Portfolio" />
+    <meta property="og:title" content="Lottin Films - Portfólio" />
     <meta
       property="og:description"
       content="Confira alguns projetos desenvolvidos por mim"
@@ -47,9 +47,9 @@
     <meta property="twitter:card" content="summary_large_image" />
     <meta
       property="twitter:url"
-      content="https://portfolio.gustavogonzaga.dev.br/"
+      content="https://lottinfilms.com.br/"
     />
-    <meta property="twitter:title" content="Gustavo Gonzaga - Portfolio" />
+    <meta property="twitter:title" content="Lottin Films - Portfólio" />
     <meta
       property="twitter:description"
       content="Confira alguns projetos desenvolvidos por mim"
@@ -61,9 +61,9 @@
     <!-- Meta Tags Generated with https://metatags.io -->
 
     <link rel="sitemap" type="application/xml" href="./sitemap.xml" />
-    <link rel="canonical" href="https://portfolio.gustavogonzaga.dev.br/" />
+    <link rel="canonical" href="https://lottinfilms.com.br/" />
     <meta name="robots" content="index, follow" />
-    <meta name="Author" content="Gustavo Gonzaga" />
+    <meta name="Author" content="Lottin Films" />
 
     <link
       rel="stylesheet"
@@ -267,11 +267,6 @@
           <h3>O Algoritmo do Investidor</h3>
           <p>Landing page, responsiva.</p>
         </div>
-        <div class="technologies">
-          <ion-icon name="logo-javascript"></ion-icon>
-          <ion-icon name="logo-html5"></ion-icon>
-          <ion-icon name="logo-css3"></ion-icon>
-        </div>
       </div>
 
       <!-- CARD 2 -->
@@ -285,11 +280,6 @@
         <div class="text">
           <h3>Norte Import</h3>
           <p>Landing page, responsiva.</p>
-        </div>
-        <div class="technologies">
-          <ion-icon name="logo-javascript"></ion-icon>
-          <ion-icon name="logo-html5"></ion-icon>
-          <ion-icon name="logo-css3"></ion-icon>
         </div>
       </div>
 
@@ -305,11 +295,6 @@
           <h3>O Algoritmo do Investidor</h3>
           <p>Landing page, responsiva.</p>
         </div>
-        <div class="technologies">
-          <ion-icon name="logo-javascript"></ion-icon>
-          <ion-icon name="logo-html5"></ion-icon>
-          <ion-icon name="logo-css3"></ion-icon>
-        </div>
       </div>
 
       <!-- CARD 4 -->
@@ -323,11 +308,6 @@
         <div class="text">
           <h3>Norte Import</h3>
           <p>Landing page, responsiva.</p>
-        </div>
-        <div class="technologies">
-          <ion-icon name="logo-javascript"></ion-icon>
-          <ion-icon name="logo-html5"></ion-icon>
-          <ion-icon name="logo-css3"></ion-icon>
         </div>
       </div>
     </div>
@@ -351,24 +331,25 @@
         <div data-aos="fade-up" class="swiper mySwiper">
           <div class="swiper-wrapper cards">
             <div class="swiper-slide card">
-              <ion-icon name="logo-javascript"></ion-icon>
-              <span>JavaScript</span>
+              <img src="/imagens/logo-ae.png" alt="AfterEffects" style="width: 64px; height: 64px;">
+              <span>AfterEffects</span>
               <p>
-                A maior parte da minha experiência com JavaScript foi através do
-                curso da RocketSeat, nele, pude lidar com diversos desafios que
-                me fizeram concluir projetos complexos e ter um nível
-                intermediário nessa linguagem atualmente.
+                É uma das ferramentas que mais domino. Uso para criar intros,
+                efeitos especiais, animações e composições visuais que deixam
+                meus vídeos mais profissionais. Com ele, adiciono movimentos
+                e efeitos que transformam ideias simples em conteúdos marcantes.
               </p>
             </div>
 
             <div class="swiper-slide card">
-              <ion-icon name="logo-html5"></ion-icon>
-              <span>HTML</span>
+              <img src="/imagens/DaVinci.png" alt="DaVinci" style="width: 64px; height: 64px;">
+              <span>DaVinci Resolve</span>
               <p>
-                Hoje, posso considerar que estou em um nível avançado de HTML. A
-                maior parte da experiência que adquiri com o mesmo, foi através
-                de estudos auto-didátas, desenvolvendo aplicações que na época,
-                pra mim, eram extremamente complexas.
+                Nele faço a correção de cor antes mesmo de começar a
+                edição. Assim, consigo um visual cinematográfico logo no
+                início. O controle de contraste, exposição e cor ajuda a
+                dar vida e qualidade às cenas. Essa etapa é uma das mais
+                importantes para garantir consistência visual ao longo do vídeo
               </p>
             </div>
 
@@ -376,10 +357,10 @@
               <ion-icon name="logo-css3"></ion-icon>
               <span>CSS</span>
               <p>
-                Minha trajetória com o CSS é similar ao HTML, tendo em vista que
-                no ínicio dos meus estudos quanto a programação, me dediquei
-                completamente a aprender essas duas competências, hoje, meu
-                nível de CSS é avançado,
+                É meu software principal de edição. Nele organizo as cenas com ritmo
+                e lógica, deixando os vídeos dinâmicos e fáceis de entender. Consigo usar
+                ele junto com o After Effects, colocando efeitos e animações direto na edição,
+                sem precisar exportar tudo de novo.
               </p>
             </div>
 
@@ -387,10 +368,12 @@
               <ion-icon name="logo-react"></ion-icon>
               <span>ReactJS</span>
               <p>
-                Após sentir necessidade de eficiência no desenvolvimento de
-                aplicações web e desenvolver aplicações com alto desempenho,
-                comecei meus estudos com ReactJS, hoje, consigo sentir boas
-                diferenças em relação ao JavaScript puro.
+                Uso o Photoshop para criar e ajustar ícones, PNGs e
+                imagens com precisão, garantindo artes visuais profissionais
+                alinhadas ao estilo do cliente. Além disso, o Photoshop integra-se ao
+                After Effects, permitindo modificar frames de vídeos e
+                facilitando o fluxo de trabalho.
+              </p>
               </p>
             </div>
           </div>
@@ -415,13 +398,13 @@
               data-aos-easing="ease-in-sine"
               class="card one"
             >
-              <ion-icon name="logo-javascript"></ion-icon>
-              <span>JavaScript</span>
+              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Adobe_After_Effects_CC_icon.svg/2101px-Adobe_After_Effects_CC_icon.svg.png" alt="After Effects Logo" style="width: 64px; height: 64px;">
+              <span>After Effects</span>
               <p>
-                A maior parte da minha experiência com JavaScript foi através do
-                curso da RocketSeat, nele, pude lidar com diversos desafios que
-                me fizeram concluir projetos complexos e ter um nível
-                intermediário nessa linguagem atualmente.
+                É uma das ferramentas que mais domino. Uso para criar intros,
+                efeitos especiais, animações e composições visuais que deixam
+                meus vídeos mais profissionais. Com ele, adiciono movimentos
+                e efeitos que transformam ideias simples em conteúdos marcantes.
               </p>
             </div>
 
@@ -431,13 +414,14 @@
               data-aos-easing="ease-in-sine"
               class="card two"
             >
-              <ion-icon name="logo-html5"></ion-icon>
-              <span>HTML</span>
+              <img src="/imagens/DaVinci.png" alt="DaVinci" style="width: 64px; height: 64px;">
+              <span>DaVinci Resolve</span>
               <p>
-                Hoje, posso considerar que estou em um nível avançado de HTML. A
-                maior parte da experiência que adquiri com o mesmo, foi através
-                de estudos auto-didátas, desenvolvendo aplicações que na época,
-                pra mim, eram extremamente complexas.
+                Nele faço a correção de cor antes mesmo de começar a
+                edição. Assim, consigo um visual cinematográfico logo no
+                início. O controle de contraste, exposição e cor ajuda a
+                dar vida e qualidade às cenas. Essa etapa é uma das mais
+                importantes para garantir consistência visual ao longo do vídeo
               </p>
             </div>
 
@@ -447,13 +431,13 @@
               data-aos-easing="ease-in-sine"
               class="card three"
             >
-              <ion-icon name="logo-css3"></ion-icon>
-              <span>CSS</span>
+              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/Adobe_Premiere_Pro_CC_icon.svg/2101px-Adobe_Premiere_Pro_CC_icon.svg.png" alt="Premiere Pro Logo" style="width: 64px; height: 64px;">
+              <span>Premiere Pro</span>
               <p>
-                Minha trajetória com o CSS é similar ao HTML, tendo em vista que
-                no ínicio dos meus estudos quanto a programação, me dediquei
-                completamente a aprender essas duas competências, hoje, meu
-                nível de CSS é avançado,
+                É meu software principal de edição. Nele organizo as cenas com ritmo
+                e lógica, deixando os vídeos dinâmicos e fáceis de entender. Consigo usar
+                ele junto com o After Effects, colocando efeitos e animações direto na edição,
+                sem precisar exportar tudo de novo.
               </p>
             </div>
 
@@ -463,15 +447,19 @@
               data-aos-easing="ease-in-sine"
               class="card for"
             >
-              <ion-icon name="logo-react"></ion-icon>
-              <span>ReactJS</span>
+              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Adobe_Photoshop_CC_icon.svg/1051px-Adobe_Photoshop_CC_icon.svg.png" alt="Photoshop Logo" style="width: 64px; height: 64px;">
+
+              <span>Photoshop</span>
               <p>
-                Após sentir necessidade de eficiência no desenvolvimento de
-                aplicações web e desenvolver aplicações com alto desempenho,
-                comecei meus estudos com ReactJS, hoje, consigo sentir boas
-                diferenças em relação ao JavaScript puro.
+                Uso o Photoshop para criar e ajustar ícones, PNGs e
+                imagens com precisão, garantindo artes visuais profissionais
+                alinhadas ao estilo do cliente. Além disso, o Photoshop integra-se ao
+                After Effects, permitindo modificar frames de vídeos e
+                facilitando o fluxo de trabalho.
               </p>
             </div>
+
+
           </div>
         </div>
       </div>
@@ -492,26 +480,21 @@
 
           <div class="text">
             <p data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">
-              <span>Desenvolvedor Web</span>, fascinado por códigos.
+              <span>Filmmaker e Editor</span>
             </p>
 
             <ul>
               <li data-aos="fade-up-left">📍 Abadiânia, Goiás.</li>
               <li data-aos="fade-up-left">
-                📚 Aluno de Análise e Desenvolvimento de Sistemas na UniGoias
+                🧠 Curioso e sempre em busca de novos efeitos e técnicas visuais.
               </li>
               <li data-aos="fade-up-left">
-                📚 Aluno do curso Explorer, da RocketSeat.
+                🎥 Especialista em edição, motion e pós-produção
               </li>
-              <li data-aos="fade-up-left">👨‍💻 Free-Lancer</li>
-              <li data-aos="fade-up-left">💻 contato@studioaltonivel.com.br</li>
+              <li data-aos="fade-up-left">👨‍💻 Freelancer em vídeo, design e social media.</li>
+              <li data-aos="fade-up-left">💻 lottinvfx@gmail.com</li>
             </ul>
 
-            <!-- <div data-aos="fade-up-left" class="button">
-                        <a target="_blank" href="./Gustavo Gonzaga curriculo.pdf">
-                            <button>Confira meu CV <ion-icon name="enter-outline"></ion-icon></button>
-                        </a>
-                    </div> -->
           </div>
         </div>
       </div>
@@ -688,4 +671,3 @@
     </script>
   </body>
 </html>
-
