--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     />
     <meta
       property="og:image"
-      content="https://portfolio.gustavogonzaga.dev/assets/CapaPortfolio.jpg"
+      content="https://lottin.films.com.br/imagens/fundo.png"
     />
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
@@ -56,7 +56,7 @@
     />
     <meta
       property="twitter:image"
-      content="https://portfolio.gustavogonzaga.dev/assets/CapaPortfolio.jpg"
+      content="https://lottin.films.com.br/imagens/fundo.png"
     />
     <!-- Meta Tags Generated with https://metatags.io -->
 
@@ -72,10 +72,9 @@
 
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/navigation.css" />
-    <link
-      rel="shortcut icon"
-      href="./assets/foto gg icon.png"
-      type="image/x-icon"
+      <link rel="icon" href="./assets/foto gg icon.png" type="image/png" />
+<link rel="shortcut icon" href="./assets/foto gg icon.png" type="image/png" />
+
     />
 
     <script
@@ -91,111 +90,33 @@
         <ul>
           <li><a onclick="closeMenu()" href="#home">Home</a></li>
           <li><a onclick="closeMenu()" href="#projects">Projetos</a></li>
-          <li><a onclick="closeMenu()" href="#competencias">Habilidades</a></li>
+          <li><a onclick="closeMenu(); return false;">Habilidades</a></li>
           <li><a onclick="closeMenu()" href="#sobre">Sobre</a></li>
         </ul>
-
+        <section id="home">
         <div class="social-links">
           <a
-            data-aos="fade-up"
-            data-aos-anchor-placement="top-bottom"
-            class="in"
-            target="_blank"
-            href="https://www.linkedin.com/in/gustavognzg/"
+          data-aos="fade-up"
+          data-aos-anchor-placement="top-bottom"
+          class="in"
+          target="_blank"
+          href="https://wa.me/5562986531443"
           >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              height="40"
-              width="40"
-            >
-              <path
-                stroke="#fff"
-                stroke-linejoin="round"
-                d="M1.5 3.5a2 2 0 1 0 4 0 2 2 0 1 0 -4 0"
-                stroke-width="1"
-              ></path>
-              <path
-                stroke="#fff"
-                stroke-linejoin="round"
-                d="M1.5 22.5v-14h4v14h-4Z"
-                clip-rule="evenodd"
-                stroke-width="1"
-              ></path>
-              <path
-                stroke="#fff"
-                stroke-linejoin="round"
-                d="M8 8.5v14h4v-6.908c0 -1.092 1 -3.092 3.895 -3.092 1.643 0 2.605 0.845 2.605 2.5v7.5h4V15c0 -1.309 -0.312 -2.937 -1.394 -4.277 -1.144 -1.417 -2.913 -2.223 -5.21 -2.223 -1.513 0 -2.835 0.615 -3.896 1.366V8.5H8Z"
-                clip-rule="evenodd"
-                stroke-width="1"
-              ></path>
-            </svg>
-          </a>
+           <img src="/imagens/whatsapp.png" alt="LinkedIn" height="100" width="100" />
+</a>
 
-          <a
-            data-aos="fade-up"
-            data-aos-anchor-placement="top-bottom"
-            class="git"
-            target="_blank"
-            href="wa.me/5562986531443"
-          >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              height="40"
-              width="40"
-            >
-              <path
-                stroke="#fff"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                d="M11.996 1.771a10.486 10.486 0 0 0 -3.314 20.438c0.523 0.092 0.69 -0.216 0.69 -0.493 0 -0.25 0.005 -0.945 0 -1.824 -2.919 0.633 -3.522 -1.381 -3.522 -1.381a2.775 2.775 0 0 0 -1.163 -1.534c-0.952 -0.65 0.071 -0.638 0.071 -0.638a2.201 2.201 0 0 1 1.607 1.08 2.232 2.232 0 0 0 3.05 0.871c0.05 -0.53 0.285 -1.025 0.666 -1.397 -2.328 -0.266 -4.776 -1.165 -4.776 -5.184a4.055 4.055 0 0 1 1.08 -2.815 3.762 3.762 0 0 1 0.103 -2.774s0.882 -0.282 2.883 1.076a9.924 9.924 0 0 1 5.252 0c2.007 -1.357 2.881 -1.076 2.881 -1.076 0.387 0.878 0.424 1.87 0.104 2.774a4.05 4.05 0 0 1 1.079 2.816c0 4.03 -2.452 4.916 -4.789 5.174a2.487 2.487 0 0 1 0.718 1.933v2.904c0 0.28 0.17 0.59 0.702 0.488a10.487 10.487 0 0 0 -3.322 -20.438v0Z"
-                stroke-width="1"
-              ></path>
-            </svg>
-          </a>
+         <a
+  data-aos="fade-up"
+  data-aos-anchor-placement="top-bottom"
+  class="in"
+  target="_blank"
+  href="https://www.instagram.com/lottin.films/"
+>
+  <img src="/imagens/insta.png" alt="LinkedIn" height="100" width="100" />
+</a>
 
-          <a
-            data-aos="fade-up"
-            data-aos-anchor-placement="top-bottom"
-            class="ig"
-            target="_blank"
-            href="https://www.instagram.com/gustavognzg/"
-          >
-            <svg
-              xmlns="http://www.w3.org/2000/svg"
-              fill="none"
-              viewBox="0 0 24 24"
-              height="40"
-              width="40"
-            >
-              <path
-                stroke="#fff"
-                stroke-linejoin="round"
-                d="M18 6.5a0.5 0.5 0 0 1 0 -1"
-                stroke-width="1"
-              ></path>
-              <path
-                stroke="#fff"
-                stroke-linejoin="round"
-                d="M18 6.5a0.5 0.5 0 0 0 0 -1"
-                stroke-width="1"
-              ></path>
-              <path
-                stroke="#fff"
-                stroke-linejoin="round"
-                d="M7 12a5 5 0 1 0 10 0 5 5 0 1 0 -10 0"
-                stroke-width="1"
-              ></path>
-              <path
-                stroke="#fff"
-                d="M16.5 1.5h-9a6 6 0 0 0 -6 6v9a6 6 0 0 0 6 6h9a6 6 0 0 0 6 -6v-9a6 6 0 0 0 -6 -6Z"
-                stroke-width="1"
-              ></path>
-            </svg>
-          </a>
+
+
         </div>
       </div>
 
@@ -212,16 +133,19 @@
             <source src="./assets/bg video.mp4" type="video/mp4" />
           </video>
 
+
+
           <div class="content">
             <div class="text">
               <div data-aos="fade-down-right" class="paragraphy">
-                <p>Olá! Eu sou o Carlos da</p>
+                <p>Olá! Eu sou o Carlos do</p>
               </div>
 
                <div class="logo-container"
        data-aos="fade-up"
        data-aos-anchor-placement="bottom-bottom">
     <img src="/imagens/sticker.png" alt="Lottin Films" class="logo-sticker">
+
   </div>
 </div>
 
@@ -247,7 +171,7 @@
   <div class="wrapper">
     <header>
       <h2 data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">
-        Boas-Vindas ao meu portifólio.
+        Boas-Vindas ao meu portfólio
       </h2>
       <p data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">
         Aqui você encontra meus melhores projetos!
@@ -264,9 +188,11 @@
           </video>
         </div>
         <div class="text">
-          <h3>O Algoritmo do Investidor</h3>
-          <p>Landing page, responsiva.</p>
-        </div>
+  <h3>🛠️ Comercial – Ponto Zero2</h3>
+  <p>Produção de vídeo comercial para a Ponto Zero2, focado em destacar seus serviços de projeto e regularização de construções. Criado para redes sociais, com linguagem simples, objetiva e voltado para conversão.</p>
+  <p><strong>Função no projeto:</strong> Filmagem, roteiro, edição e finalização.</p>
+</div>
+
       </div>
 
       <!-- CARD 2 -->
@@ -278,36 +204,102 @@
           </video>
         </div>
         <div class="text">
-          <h3>Norte Import</h3>
-          <p>Landing page, responsiva.</p>
+          <h3>🚜 Comercial – Somos Empilhadeiras (AgroBrasília)</h3>
+          <p>Vídeo comercial para a Somos Empilhadeiras na
+            AgroBrasília, com foco em soluções robustas para o agronegócio.
+            Produção voltada à divulgação institucional no setor agro.</p>
+          <p><strong>Função no projeto:</strong> Filmagem, edição e finalização.</p>
         </div>
       </div>
 
       <!-- CARD 3 -->
       <div data-aos="fade-up-left" class="card">
         <div class="image">
-          <video class="floating" controls muted loop poster="/videos/bvideo01.png">
-            <source src="/videos/video01.mp4" type="video/mp4" />
+          <video class="floating" controls muted loop poster="/videos/bvideo03.png">
+            <source src="/videos/video03.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
         <div class="text">
-          <h3>O Algoritmo do Investidor</h3>
-          <p>Landing page, responsiva.</p>
+          <h3>🏡 Comercial – Recanto do Lazer</h3>
+          <p>Vídeo comercial para o salão de eventos Recanto do Lazer, localizado em Abadiânia. Destaque para a estrutura completa, localização e proposta de custo sob demanda. Produção voltada para redes sociais com foco em conversão.</p>
+          <p><strong>Função no projeto:</strong> Filmagem, roteiro, edição e finalização.</p>
+        </div>
+      </div>
+      <div data-aos="fade-up-left" class="card">
+        <div class="image">
+          <video class="floating" controls muted loop poster="/videos/bvideo05.png">
+            <source src="/videos/video05.mp4" type="video/mp4" />
+            Seu navegador não suporta vídeos HTML5.
+          </video>
+        </div>
+        <div class="text">
+          <h3>💐 Dia das Mães – Hortênsia</h3>
+          <p>Vídeo especial para o Dia das Mães produzido para a Hortênsia, com roteiro emocional e foco na conexão familiar.</p>
+          <p><strong>Função no projeto:</strong> Roteiro, filmagem, edição e finalização.</p>
+        </div>
+      </div>
+      <div data-aos="fade-up-left" class="card">
+        <div class="image">
+          <video class="floating" controls muted loop poster="/videos/bvideo04.png">
+            <source src="/videos/video04.mp4" type="video/mp4" />
+            Seu navegador não suporta vídeos HTML5.
+          </video>
+        </div>
+        <div class="text">
+          <h3>💍 Pedido de Casamento – Surpresa</h3>
+          <p>Registro de um pedido de casamento surpresa, capturando a emoção do momento com
+            sensibilidade e estética cinematográfica.
+            Ideal para eternizar ocasiões especiais com autenticidade e impacto visual.</p>
+          <p><strong>Função no projeto:</strong> Filmagem, edição e finalização.</p>
         </div>
       </div>
 
       <!-- CARD 4 -->
       <div data-aos="fade-up-right" class="card">
         <div class="image">
-          <video class="floating" controls muted loop poster="/videos/bvideo02.png">
-            <source src="/videos/video02.mp4" type="video/mp4" />
+          <video class="floating" controls muted loop poster="/videos/bvideo06.png">
+            <source src="/videos/video06.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
         <div class="text">
-          <h3>Norte Import</h3>
-          <p>Landing page, responsiva.</p>
+          <h3>🚗 Drift – Chevette Four One</h3>
+          <p>Seleção dos melhores takes de um dia de drift com um
+            Chevette preparado. Captação focada em ângulos dinâmicos,
+            detalhes visuais, atmosfera de velocidade e Estilo cinematográfico
+          </p>
+          <p><strong>Função no projeto:</strong> Filmagem, edição e finalização.</p>
+        </div>
+      </div>
+      <div data-aos="fade-up-right" class="card">
+        <div class="image">
+          <video class="floating" controls muted loop poster="/videos/bvideo07.png">
+            <source src="/videos/video07.mp4" type="video/mp4" />
+            Seu navegador não suporta vídeos HTML5.
+          </video>
+        </div>
+        <div class="text">
+          <h3>🏁 Encontro Automotivo – CPM Meeting</h3>
+          <p>Vídeo dinâmico produzido no evento CPM Meeting, com takes de carros fazendo drift
+            sincronizados com batidas da música.
+            Captação focada em movimento, som e estilo para transmitir a energia do encontro.</p>
+          <p><strong>Função no projeto:</strong> Filmagem, edição e finalização.</p>
+        </div>
+      </div>
+      <div data-aos="fade-up-right" class="card">
+        <div class="image">
+          <video class="floating" controls muted loop poster="/videos/bvideo08.png">
+            <source src="/videos/video08.mp4" type="video/mp4" />
+            Seu navegador não suporta vídeos HTML5.
+          </video>
+        </div>
+        <div class="text">
+          <h3>🎥 Edit Carro + Efeitos Visuais</h3>
+          <p>Edit criativa com uso de efeitos visuais e elementos 3D aplicados sobre imagens captadas com iPhone 15.
+            Um projeto que mostra que não é preciso uma
+            câmera profissional para criar algo impactante, bastam boas ideias e pós-produção bem feita.</p>
+          <p><strong>Função no projeto:</strong> Filmagem, VFX, 3D, edição e finalização.</p>
         </div>
       </div>
     </div>
@@ -326,12 +318,12 @@
             Habilidades
           </h2>
         </header>
-        <img class="textoHabilidades" src="./assets/HABILIDADES.png" alt="Texto Habilidades" />
+        <img class="textoHabilidades" src="./assets/habilidades.png" alt="" />
 
         <div data-aos="fade-up" class="swiper mySwiper">
           <div class="swiper-wrapper cards">
             <div class="swiper-slide card">
-              <img src="/imagens/logo-ae.png" alt="AfterEffects" style="width: 64px; height: 64px;">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/cb/Adobe_After_Effects_CC_icon.svg/2101px-Adobe_After_Effects_CC_icon.svg.png" alt="After Effects Logo" style="width: 64px; height: 64px;">
               <span>AfterEffects</span>
               <p>
                 É uma das ferramentas que mais domino. Uso para criar intros,
@@ -354,8 +346,8 @@
             </div>
 
             <div class="swiper-slide card">
-              <ion-icon name="logo-css3"></ion-icon>
-              <span>CSS</span>
+               <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/40/Adobe_Premiere_Pro_CC_icon.svg/2101px-Adobe_Premiere_Pro_CC_icon.svg.png" alt="Premiere Pro Logo" style="width: 64px; height: 64px;">
+              <span>Premiere Pro</span>
               <p>
                 É meu software principal de edição. Nele organizo as cenas com ritmo
                 e lógica, deixando os vídeos dinâmicos e fáceis de entender. Consigo usar
@@ -365,10 +357,10 @@
             </div>
 
             <div class="swiper-slide card">
-              <ion-icon name="logo-react"></ion-icon>
-              <span>ReactJS</span>
+              <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Adobe_Photoshop_CC_icon.svg/1051px-Adobe_Photoshop_CC_icon.svg.png" alt="Photoshop Logo" style="width: 64px; height: 64px;">
+              <span>Photoshop</span>
               <p>
-                Uso o Photoshop para criar e ajustar ícones, PNGs e
+                Uso ele para criar e ajustar ícones, PNGs e
                 imagens com precisão, garantindo artes visuais profissionais
                 alinhadas ao estilo do cliente. Além disso, o Photoshop integra-se ao
                 After Effects, permitindo modificar frames de vídeos e
@@ -451,7 +443,7 @@
 
               <span>Photoshop</span>
               <p>
-                Uso o Photoshop para criar e ajustar ícones, PNGs e
+                Uso ele para criar e ajustar ícones, PNGs e
                 imagens com precisão, garantindo artes visuais profissionais
                 alinhadas ao estilo do cliente. Além disso, o Photoshop integra-se ao
                 After Effects, permitindo modificar frames de vídeos e
@@ -469,7 +461,7 @@
     <section id="sobre">
       <div class="wrapper">
         <div data-aos="fade-up-right" class="image">
-          <img src="./assets/foto gg 2.webp" alt="Foto de Gustavo Gonzaga" />
+          <img src="./imagens/ImagemMinha.png" alt="Foto de Carlos" />
         </div>
         <div class="content">
           <header>
@@ -493,12 +485,26 @@
               </li>
               <li data-aos="fade-up-left">👨‍💻 Freelancer em vídeo, design e social media.</li>
               <li data-aos="fade-up-left">💻 lottinvfx@gmail.com</li>
+
             </ul>
+            <footer>
+  <div class="social-links" data-aos="fade-up">
+  <a href="https://wa.me/5562986531443" target="_blank" rel="noopener noreferrer" class="floating">
+    <img src="/imagens/whatsapp.png" alt="WhatsApp" width="80" height="80" />
+  </a>
+  <a href="https://instagram.com/lottin.films" target="_blank" rel="noopener noreferrer" class="floating">
+    <img src="/imagens/insta.png" alt="Instagram" width="80" height="80" />
+  </a>
+</div>
+
+</footer>
+
 
           </div>
         </div>
       </div>
     </section>
+
 
     <a id="buttonHome" class="show" target="_blank" href="">
       <svg
@@ -516,6 +522,7 @@
         />
       </svg>
     </a>
+
 
     <script src="/js/particles.min.js"></script>
     <script>
