--- a/index.html
+++ b/index.html
@@ -317,6 +317,9 @@
           <h2 data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">
             Habilidades
           </h2>
+          <p data-aos="fade-up" data-aos-anchor-placement="bottom-bottom">
+        Arraste para o lado!
+      </p>
         </header>
         <img class="textoHabilidades" src="./assets/habilidades.png" alt="" />
 
