--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
       <div data-aos="fade-up-left" class="card">
         <div class="image">
           <video class="floating" controls muted loop poster="/videos/bvideo01.png">
-            <source src="/videos/video01.mp4" type="video/mp4" />
+             <source src="https://pub-964fe2e2f25d4c03ae6753ee4f5d1436.r2.dev/VideoPontoZero2_1.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
@@ -199,7 +199,7 @@
       <div data-aos="fade-up-right" class="card">
         <div class="image">
           <video class="floating" controls muted loop poster="/videos/bvideo02.png">
-            <source src="/videos/video02.mp4" type="video/mp4" />
+            <source src="https://pub-964fe2e2f25d4c03ae6753ee4f5d1436.r2.dev/video002.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
@@ -216,7 +216,7 @@
       <div data-aos="fade-up-left" class="card">
         <div class="image">
           <video class="floating" controls muted loop poster="/videos/bvideo03.png">
-            <source src="/videos/video03.mp4" type="video/mp4" />
+            <source src="https://pub-964fe2e2f25d4c03ae6753ee4f5d1436.r2.dev/video003.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
@@ -229,7 +229,7 @@
       <div data-aos="fade-up-left" class="card">
         <div class="image">
           <video class="floating" controls muted loop poster="/videos/bvideo05.png">
-            <source src="/videos/video05.mp4" type="video/mp4" />
+            <source src="https://pub-964fe2e2f25d4c03ae6753ee4f5d1436.r2.dev/Video005.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
@@ -242,7 +242,7 @@
       <div data-aos="fade-up-left" class="card">
         <div class="image">
           <video class="floating" controls muted loop poster="/videos/bvideo04.png">
-            <source src="/videos/video04.mp4" type="video/mp4" />
+            <source src="https://pub-964fe2e2f25d4c03ae6753ee4f5d1436.r2.dev/video004.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
@@ -259,7 +259,7 @@
       <div data-aos="fade-up-right" class="card">
         <div class="image">
           <video class="floating" controls muted loop poster="/videos/bvideo06.png">
-            <source src="/videos/video06.mp4" type="video/mp4" />
+            <source src="https://pub-964fe2e2f25d4c03ae6753ee4f5d1436.r2.dev/Video006.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
@@ -275,7 +275,7 @@
       <div data-aos="fade-up-right" class="card">
         <div class="image">
           <video class="floating" controls muted loop poster="/videos/bvideo07.png">
-            <source src="/videos/video07.mp4" type="video/mp4" />
+            <source src="https://pub-964fe2e2f25d4c03ae6753ee4f5d1436.r2.dev/video007.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
@@ -290,7 +290,7 @@
       <div data-aos="fade-up-right" class="card">
         <div class="image">
           <video class="floating" controls muted loop poster="/videos/bvideo08.png">
-            <source src="/videos/video08.mp4" type="video/mp4" />
+            <source src="https://pub-964fe2e2f25d4c03ae6753ee4f5d1436.r2.dev/video008.MP4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
@@ -479,14 +479,14 @@
             </p>
 
             <ul>
-              <li data-aos="fade-up-left">📍 Abadiânia, Goiás.</li>
+              <li data-aos="fade-up-left">📍 Abadiânia | GO</li>
               <li data-aos="fade-up-left">
                 🧠 Curioso e sempre em busca de novos efeitos e técnicas visuais.
               </li>
               <li data-aos="fade-up-left">
-                🎥 Especialista em edição, motion e pós-produção
+                🎥 Especialista em edição, motion e pós-produção.
               </li>
-              <li data-aos="fade-up-left">👨‍💻 Freelancer em vídeo, design e social media.</li>
+              <li data-aos="fade-up-left">👨‍💻 Freelancer de criação audiovisual.</li>
               <li data-aos="fade-up-left">💻 lottinvfx@gmail.com</li>
 
             </ul>
