--- a/index.html
+++ b/index.html
@@ -183,14 +183,14 @@
       <div data-aos="fade-up-left" class="card">
         <div class="image">
           <video class="floating" controls muted loop poster="/videos/bvideo01.png">
-             <source src="https://pub-964fe2e2f25d4c03ae6753ee4f5d1436.r2.dev/VideoPontoZero2_1.mp4" type="video/mp4" />
+             <source src="/videos/video01.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
         <div class="text">
   <h3>🛠️ Comercial – Ponto Zero2</h3>
   <p>Produção de vídeo comercial para a Ponto Zero2, focado em destacar seus serviços de projeto e regularização de construções. Criado para redes sociais, com linguagem simples, objetiva e voltado para conversão.</p>
-  <p><strong>Função no projeto:</strong> Filmagem, roteiro, edição e finalização. </p>
+  <p><strong>Função no projeto:</strong> Filmagem, roteiro, edição e finalização.</p>
 </div>
 
       </div>
@@ -216,7 +216,7 @@
       <div data-aos="fade-up-left" class="card">
         <div class="image">
           <video class="floating" controls muted loop poster="/videos/bvideo03.png">
-            <source src="https://pub-964fe2e2f25d4c03ae6753ee4f5d1436.r2.dev/video003.mp4" type="video/mp4" />
+            <source src="/videos/video03.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
@@ -228,7 +228,7 @@
       </div>
       <div data-aos="fade-up-left" class="card">
         <div class="image">
-          <video class="floating" controls muted loop poster="/videos/bvideo05.png">
+          <video class="floating" controls muted loop poster="/videos/bvideo04.png">
             <source src="https://pub-964fe2e2f25d4c03ae6753ee4f5d1436.r2.dev/Video005.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
@@ -241,7 +241,7 @@
       </div>
       <div data-aos="fade-up-left" class="card">
         <div class="image">
-          <video class="floating" controls muted loop poster="/videos/bvideo04.png">
+          <video class="floating" controls muted loop poster="/videos/bvideo05.png">
             <source src="https://pub-964fe2e2f25d4c03ae6753ee4f5d1436.r2.dev/video004.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
@@ -275,7 +275,7 @@
       <div data-aos="fade-up-right" class="card">
         <div class="image">
           <video class="floating" controls muted loop poster="/videos/bvideo07.png">
-            <source src="https://pub-964fe2e2f25d4c03ae6753ee4f5d1436.r2.dev/video007.mp4" type="video/mp4" />
+            <source src="/videos/video07.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
@@ -290,7 +290,7 @@
       <div data-aos="fade-up-right" class="card">
         <div class="image">
           <video class="floating" controls muted loop poster="/videos/bvideo08.png">
-            <source src="https://pub-964fe2e2f25d4c03ae6753ee4f5d1436.r2.dev/video008.MP4" type="video/mp4" />
+            <source src="/videos/video08.mp4" type="video/mp4" />
             Seu navegador não suporta vídeos HTML5.
           </video>
         </div>
@@ -681,3 +681,4 @@
     </script>
   </body>
 </html>
+
